# parliementx

./: pyproject.toml  requirements.txt
Gambie/: gambie_deputes.xlsx
Guinea/: deputes.csv  deputes.xlsx  guinea_depute.py
Guinea-Bissau/: deputes.csv  deputes.py
Senegal/: deputes.csv  sen_deputes.py
benin/: benin_deputes.py  deputes.csv
burkina/: burkina_rdp.py  noms.csv
cabo verde/: cabo_verde_deputes.py  deputes.csv
cote_d'ivoire/: liste_des_depute_anci.xlsx
ghana/: ghana_parliement_links.py  ghana_parliement_members.py  parlement_ghana.csv
nigeria/: nigeria_deputes.csv  nigeria_deputes.py  nigeria_senate.py  nigeria_senateurs.csv
sierra_leone/: membres_parlement.csv  sr_deputy.py
togo/: togo_deputes.csv  togo_deputes.py
